@@ -1,4 +1,9 @@
 # $Id$
+2007-09-04 Benoit Grégoire  <bock@step.polymtl.ca>
+	* cron/page.php:  Improve script to output what it did.
+	* fix typo in Node::DEPRECATEDgetTechnicalOfficers(), that prevented getting the users to page in case a node is down.
+	* Delete leftover login.tpl
+	
 2007-08-30 Benoit Grégoire  <bock@step.polymtl.ca>
 	* install.php:  Experimental fix for #353
 
